--- a/download.html
+++ b/download.html
@@ -8,19 +8,19 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="author" content="Oddox">
 	<meta name="keywords" content="oddox,blog,open,source,offline,first,sync,couchdb,pouchdb,blogging,platform,application" />
-	<meta name="description" content="Oddox is a blog with an offline-first editor. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
+	<meta name="description" content="Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta name="robots" content="all" />
 
 	<!-- Facebook Open Graph -->
 	<meta property="og:url" content="https://oddox.org" />
 	<meta property="og:type" content="product" />
 	<meta property="og:locale" content="en_US" />
-	<meta property="og:title" content="Oddox" />
+	<meta property="og:title" content="Oddox - open source blog with an offline-first writer" />
 	<meta property="og:image" content="https://oddox.org/assets/logo-social-media.png" />
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:image:width" content="600" />
 	<meta property="og:image:height" content="314" />
-	<meta property="og:description" content="Oddox is a blog with an offline-first editor. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
+	<meta property="og:description" content="Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta property="og:site_name" content="Oddox" />
 
 	<!-- Twitter Card -->
@@ -28,14 +28,14 @@
 	<meta name="twitter:site" content="@oddoxorg" />
 	<meta name="twitter:creator" content="@amdelamar" />
 	<meta name="twitter:type" content="website" />
-	<meta name="twitter:title" content="Oddox" />
-	<meta name="twitter:description" content="Oddox is a blog with an offline-first editor. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
+	<meta name="twitter:title" content="Oddox - open source blog with an offline-first writer" />
+	<meta name="twitter:description" content="Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta name="twitter:image" content="https://oddox.org/assets/logo-social-media.png" />
 	<meta name="twitter:domain" content="oddox.org" />
 
 	<!-- Google+ Schema.org -->
-	<meta itemprop="name" content="Oddox" />
-	<meta itemprop="description" content="Oddox is a blog with an offline-first editor. Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
+	<meta itemprop="name" content="Oddox - open source blog with an offline-first writer" />
+	<meta itemprop="description" content="Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
 	<meta itemprop="image" content="https://oddox.org/assets/logo-social-media.png" />
 
 	<link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
