Add more icomoon icons

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 	<meta name="theme-color" content="#67d9b8">
 
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" href="https://austindelamar.com/osseous/1.2.0/osseous.min.css" />
-	<link rel="stylesheet" href="vendor/icomoon/icomoon.css?v=2">
+	<link rel="stylesheet" href="vendor/osseous/1.2.0/osseous.min.css" />
+	<link rel="stylesheet" href="vendor/icomoon/icomoon.min.css">
 	<link rel="stylesheet" href="css/style.css?v=1">
 	<title>Oddox - open source blog with an offline-first writer</title>
 </head>
@@ -248,7 +248,7 @@
 		<a class="button button-small margin-right right" target="_blank" href="https://github.com/oddoxorg/oddox.org">Edit this page</a>
 	</footer>
 
-	<script type="text/javascript" src="https://austindelamar.com/osseous/1.2.0/osseous.min.js"></script>
+	<script type="text/javascript" src="vendor/osseous/1.2.0/osseous.min.js"></script>
 </body>
 
 </html>
