--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
 
 	<nav id="sidebarMenu" class="sidebar border-right shadow-right">
 		<div class="nav-item-close">
-			<a class="right" title="Close Menu" href="javascript:closeSidebar()" aria-label="Close">
-          <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M2.757 14.657L8 9.414l5.243 5.243 1.414-1.414L9.414 8l5.243-5.243-1.414-1.414L8 6.586 2.757 1.343 1.343 2.757 6.586 8l-5.243 5.243z" fill-rule="evenodd"></path></svg>
+			<a class="right padding" title="Close Menu" href="javascript:closeSidebar()" aria-label="Close">
+          <svg width="24" height="24" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M2.757 14.657L8 9.414l5.243 5.243 1.414-1.414L9.414 8l5.243-5.243-1.414-1.414L8 6.586 2.757 1.343 1.343 2.757 6.586 8l-5.243 5.243z" fill-rule="evenodd"></path></svg>
       </a>
 		</div>
 		<div class="nav-list text-center" onclick="closeSidebar()">
@@ -84,7 +84,7 @@
 			</div>
 			<div class="nav-small-menu">
 				<a class="nav-item" title="Open Menu" href="javascript:openSidebar()">
-            <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M0 7h16v2H0V7zm0-6h16v2H0V1zm0 12h16v2H0v-2z" fill-rule="evenodd"></path></svg>
+            <svg width="24" height="24" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M0 7h16v2H0V7zm0-6h16v2H0V1zm0 12h16v2H0v-2z" fill="#fff" fill-rule="evenodd"></path></svg>
         </a>
 			</div>
 			<div class="nav-group nav-large-menu text-bold">
