--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 	<meta name="theme-color" content="#67d9b8">
 
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" href="vendor/osseous/1.2.0/osseous.min.css" />
+	<link rel="stylesheet" href="vendor/osseous/2.0.1/osseous.min.css" />
 	<link rel="stylesheet" href="vendor/icomoon/icomoon.min.css">
-	<link rel="stylesheet" href="css/style.css?v=1">
+	<link rel="stylesheet" href="css/style.css?v=1.1">
 	<title>Oddox - open source blog with an offline-first writer</title>
 </head>
 
@@ -78,9 +78,9 @@
 
 		<div class="navbar-body container">
 			<div class="nav-item-logo">
-				<a href="/">
+				<a href="/" class="text-nounderline">
             <img src="assets/icon-transparent-512.png" alt="Logo" class="margin-left margin-right" alt="Oddox" />
-            <span class="text-medium text-wide text-white">Oddox</span>
+            <span class="text-medium text-wide text-white">oddox</span>
           </a>
 			</div>
 			<div class="nav-small-menu">
@@ -104,8 +104,8 @@
 			<div class="twelve columns padding-bottom-large">
 				<h3 class="padding">open source blog with an offline-first writer</h3>
 				<p></p>
-				<a href="/download" class="button button-white">Download</a>&nbsp;
-				<a href="#samples" class="button button-white button-white-outline">View Samples</a>
+				<a href="/download" class="button button-primary">Download</a>&nbsp;
+				<a href="https://github.com/oddoxorg/" target="_blank" class="button button-white button-white-outline">Get Source</a>
 			</div>
 		</div>
 	</header>
@@ -137,8 +137,8 @@
 	<div id="download" class="section text-center background-solid-black text-grey">
 		<div class="container">
 			<h2>Try it out, its free</h2>
-			<p>Oddox is a new way to write for blogs.</p>
-			<a href="/download" class="button button-white button-white-outline">Download</a>
+			<p>Oddox is a simple way to write for blogs. Anywhere. Anytime.</p>
+			<a href="/download" class="button button-secondary">Download</a>
 		</div>
 	</div>
 
@@ -146,7 +146,7 @@
 		<div class="container">
 			<h2>Samples</h2>
 
-			<p>View blog designs and templates designed by our team.</p>
+			<p>View blog designs and templates designed by our team. All for free.</p>
 
 			<div class="row padding-top padding-bottom">
 				<div class="four columns text-center">
@@ -226,7 +226,7 @@
       </div>
 
       <p>See something missing? Let us know and we can consider adding it!</p>
-			<a href="/download" class="button button-white button-white-outline">Download</a>
+			<a href="/about" class="button button-secondary">Contact Us</a>
 		</div>
 	</div>
 
@@ -234,21 +234,20 @@
     <span class="text-bold">
       <a href="/" class="text-black border-none">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="/download" class="text-black border-none">Download</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="/contact" class="text-black border-none">Contact</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="/about" class="text-black border-none">About</a>
     </span>
 		<p>Oddox is an open source project licensed under Apache 2.0 and MIT.</p>
 		<p>
-			<a target="_blank" title="Twitter" href="https://twitter.com/oddoxorg"><span class="icon-twitter text-black text-large"></span></a>&nbsp;&nbsp;
-			<a target="_blank" title="GitHub" href="https://github.com/oddoxorg/"><span class="icon-github text-black text-large"></span></a>&nbsp;&nbsp;
-			<a target="_blank" title="Docker" href="https://hub.docker.com/u/oddoxorg/"><span class="icon-docker text-black text-large"></span></a>
+			<a class="text-nounderline" target="_blank" title="Twitter" href="https://twitter.com/oddoxorg"><span class="icon-twitter text-black text-large"></span></a>&nbsp;&nbsp;
+			<a class="text-nounderline" target="_blank" title="GitHub" href="https://github.com/oddoxorg/"><span class="icon-github text-black text-large"></span></a>&nbsp;&nbsp;
+			<a class="text-nounderline" target="_blank" title="Docker" href="https://hub.docker.com/u/oddoxorg/"><span class="icon-docker text-black text-large"></span></a>
 			<br/><br/>
 			<span class="text-black"><em>© <a href="https://oddox.org" class="text-black">Oddox</a> - 2017</em></span>
     </p>
 		<a class="button button-small margin-right right" target="_blank" href="https://github.com/oddoxorg/oddox.org">Edit this page</a>
 	</footer>
 
-	<script type="text/javascript" src="vendor/osseous/1.2.0/osseous.min.js"></script>
+	<script type="text/javascript" src="vendor/osseous/2.0.1/osseous.min.js"></script>
 </body>
 
 </html>
