Set license Apache 2.0

--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
       <a href="/download" class="text-black border-none">Download</a>&nbsp;&nbsp;&nbsp;&nbsp;
       <a href="/about" class="text-black border-none">About</a>
     </span>
-		<p>Oddox is an open source project licensed under Apache 2.0 and MIT.</p>
+		<p>Oddox is an open source project licensed under Apache 2.0.</p>
 		<p>
 			<a class="text-nounderline" target="_blank" title="Twitter" href="https://twitter.com/oddoxorg"><span class="icon-twitter text-black text-large"></span></a>&nbsp;&nbsp;
 			<a class="text-nounderline" target="_blank" title="GitHub" href="https://github.com/oddoxorg/"><span class="icon-github text-black text-large"></span></a>&nbsp;&nbsp;
