--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<meta name="robots" content="all" />
 
 	<!-- Facebook Open Graph -->
-	<meta property="og:url" content="https://oddox.org" />
+	<meta property="og:url" content="https://amdelamar.com/oddox-website/" />
 	<meta property="og:type" content="product" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:title" content="Oddox - open source blog with an offline-first writer" />
-	<meta property="og:image" content="https://oddox.org/assets/logo-social-media.png" />
+	<meta property="og:image" content="https://amdelamar.com/oddox-website/assets/logo-social-media.png" />
 	<meta property="og:image:type" content="image/png" />
 	<meta property="og:image:width" content="600" />
 	<meta property="og:image:height" content="314" />
@@ -25,18 +25,18 @@
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@oddoxorg" />
+	<meta name="twitter:site" content="@amdelamar" />
 	<meta name="twitter:creator" content="@amdelamar" />
 	<meta name="twitter:type" content="website" />
 	<meta name="twitter:title" content="Oddox - open source blog with an offline-first writer" />
 	<meta name="twitter:description" content="Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
-	<meta name="twitter:image" content="https://oddox.org/assets/logo-social-media.png" />
-	<meta name="twitter:domain" content="oddox.org" />
+	<meta name="twitter:image" content="https://amdelamar.com/oddox-website/assets/logo-social-media.png" />
+	<meta name="twitter:domain" content="amdelamar.com" />
 
 	<!-- Google+ Schema.org -->
 	<meta itemprop="name" content="Oddox - open source blog with an offline-first writer" />
 	<meta itemprop="description" content="Write, save, and publish your posts without an internet connection, then sync later when you're connected." />
-	<meta itemprop="image" content="https://oddox.org/assets/logo-social-media.png" />
+	<meta itemprop="image" content="https://amdelamar.com/oddox-website/assets/logo-social-media.png" />
 
 	<link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
 	<link rel="manifest" href="static/manifest.json">
@@ -60,17 +60,17 @@
       </a>
 		</div>
 		<div class="nav-list text-center" onclick="closeSidebar()">
-			<a class="nav-item" href="/download">Download</a>
+			<a class="nav-item" href="download">Download</a>
 			<a class="nav-item" href="#samples">Samples</a>
-			<a class="nav-item" href="https://github.com/oddoxorg/">GitHub</a>
+			<a class="nav-item" href="https://github.com/amdelamar/">GitHub</a>
 		</div>
 		<div class="padding-top-large full-width text-center">
       <p>
-  			<a target="_blank" title="Twitter" href="https://twitter.com/oddoxorg"><span class="icon-twitter text-theme text-large"></span></a>&nbsp;&nbsp;
-  			<a target="_blank" title="GitHub" href="https://github.com/oddoxorg/"><span class="icon-github text-theme text-large"></span></a>&nbsp;&nbsp;
-  			<a target="_blank" title="Docker" href="https://hub.docker.com/u/oddoxorg/"><span class="icon-docker text-theme text-large"></span></a>
+  			<a target="_blank" title="Twitter" href="https://twitter.com/amdelamar"><span class="icon-twitter text-theme text-large"></span></a>&nbsp;&nbsp;
+  			<a target="_blank" title="GitHub" href="https://github.com/amdelamar/"><span class="icon-github text-theme text-large"></span></a>&nbsp;&nbsp;
+  			<a target="_blank" title="Docker" href="https://hub.docker.com/u/amdelamar/"><span class="icon-docker text-theme text-large"></span></a>
       </p>
-			<p class="text-small"><em>© <a href="https://oddox.org">Oddox</a> - 2017</em></p>
+			<p class="text-small"><em>© <a href="https://amdelamar.com">AustinDelamar</a> - 2017-2018</em></p>
 		</div>
 	</nav>
 
@@ -89,9 +89,9 @@
         </a>
 			</div>
 			<div class="nav-group nav-large-menu text-bold">
-				<a class="nav-item text-white" href="/download">Download</a>
+				<a class="nav-item text-white" href="download">Download</a>
 				<a class="nav-item text-white" href="#samples">Samples</a>
-				<a class="nav-item text-white" href="https://github.com/oddoxorg/">GitHub</a>
+				<a class="nav-item text-white" href="https://github.com/amdelamar/">GitHub</a>
 			</div>
 		</div>
 	</nav>
@@ -105,7 +105,7 @@
 				<h3 class="padding">open source blog with an offline-first writer</h3>
 				<p></p>
 				<a href="/download" class="button button-primary">Download</a>&nbsp;
-				<a href="https://github.com/oddoxorg/" target="_blank" class="button button-white button-white-outline">Get Source</a>
+				<a href="https://github.com/amdelamar/" target="_blank" class="button button-white button-white-outline">Get Source</a>
 			</div>
 		</div>
 	</header>
@@ -232,19 +232,19 @@
 
 	<footer class="row section text-center background-solid-theme" style="background: linear-gradient(0deg,#67d9b8 0%,#4da088 100%);">
     <span class="text-bold">
-      <a href="/" class="text-black border-none">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="/download" class="text-black border-none">Download</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="/about" class="text-black border-none">About</a>
+      <a href="" class="text-black border-none">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="download" class="text-black border-none">Download</a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="about" class="text-black border-none">About</a>
     </span>
 		<p>Oddox is an open source project licensed under Apache 2.0.</p>
 		<p>
-			<a class="text-nounderline" target="_blank" title="Twitter" href="https://twitter.com/oddoxorg"><span class="icon-twitter text-black text-large"></span></a>&nbsp;&nbsp;
-			<a class="text-nounderline" target="_blank" title="GitHub" href="https://github.com/oddoxorg/"><span class="icon-github text-black text-large"></span></a>&nbsp;&nbsp;
-			<a class="text-nounderline" target="_blank" title="Docker" href="https://hub.docker.com/u/oddoxorg/"><span class="icon-docker text-black text-large"></span></a>
+			<a class="text-nounderline" target="_blank" title="Twitter" href="https://twitter.com/amdelamar"><span class="icon-twitter text-black text-large"></span></a>&nbsp;&nbsp;
+			<a class="text-nounderline" target="_blank" title="GitHub" href="https://github.com/amdelamar/"><span class="icon-github text-black text-large"></span></a>&nbsp;&nbsp;
+			<a class="text-nounderline" target="_blank" title="Docker" href="https://hub.docker.com/u/amdelamar/"><span class="icon-docker text-black text-large"></span></a>
 			<br/><br/>
-			<span class="text-black"><em>© <a href="https://oddox.org" class="text-black">Oddox</a> - 2017</em></span>
+			<span class="text-black"><em>© <a href="https://amdelamar.com" class="text-black">AustinDelamar</a> - 2017-2018</em></span>
     </p>
-		<a class="button button-small margin-right right" target="_blank" href="https://github.com/oddoxorg/oddox.org">Edit this page</a>
+		<a class="button button-small margin-right right" target="_blank" href="https://github.com/amdelamar/oddox-website/">Edit this page</a>
 	</footer>
 
 	<script type="text/javascript" src="vendor/osseous/2.0.1/osseous.min.js"></script>
