--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<div class="twelve columns padding-bottom-large">
 				<h3 class="padding">open source blog with an offline-first writer</h3>
 				<p></p>
-				<a href="/download" class="button button-primary">Download</a>&nbsp;
+				<a href="download" class="button button-primary">Download</a>&nbsp;
 				<a href="https://github.com/amdelamar/" target="_blank" class="button button-white button-white-outline">Get Source</a>
 			</div>
 		</div>
@@ -138,7 +138,7 @@
 		<div class="container">
 			<h2>Try it out, its free</h2>
 			<p>Oddox is a simple way to write for blogs. Anywhere. Anytime.</p>
-			<a href="/download" class="button button-secondary">Download</a>
+			<a href="download" class="button button-secondary">Download</a>
 		</div>
 	</div>
 
@@ -226,7 +226,7 @@
       </div>
 
       <p>See something missing? Let us know and we can consider adding it!</p>
-			<a href="/about" class="button button-secondary">Contact Us</a>
+			<a href="about" class="button button-secondary">Contact Us</a>
 		</div>
 	</div>
 
